--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-tactile
 show_downloads: true
+title: EQE359 - Termodinâmica I
+description: Material complementar para o curso de Termodinâmica I - Fred Tavares, Iuri Segtovich
