test to update page title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
+title: EQE359TermodinamicaI
+description: Material complementar para o curso de Termodinâmica I - Fred Tavares, Iuri Segtovich.
+
 theme: jekyll-theme-tactile
+
 show_downloads: true
-title: EQE359 - Termodinâmica I
-description: Material complementar para o curso de Termodinâmica I - Fred Tavares, Iuri Segtovich
+
