--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: EQE359TermodinamicaI
+title: EQE359 - Termodinamica I
 description: Material complementar para o curso de Termodinâmica I - Fred Tavares, Iuri Segtovich.
 
 theme: jekyll-theme-tactile
